<resources>
    <string name="app_name">Cambrian College</string>
    <string name="logo_name">Welcome to <br> Cambrian College...!!! </br></string>
    <string name="login_name">Enter login <br> Details </br></string>
    <string name="powered_by">Powered By Uditha Lenora</string>

    <!-- Options Screen -->
    <string name="guest_user">Guest User</string>
    <string name="registered_user">Registered User</string>
    <string name="help_center">Contact Us</string>
    <string name="programs">Programs</string>
    <string name="student_life">Student Life</string>
    <string name="about">About Us</string>
    <string name="login">LOGIN</string>
    <string name="signup">Sign Up</string>
    <string name="sign_up_topic">Welcome to User Creation</string>

    <!-- Course category screen -->

    <string name="h1">To Browse our program</string>
    <string name="h2">Choose a field to study below</string>
    <string name="h3">Choose a program to study</string>
    <string name="general">General Studies</string>
    <string name="health">Health Sciences</string>
    <string name="skilled">Skilled Trades Training</string>
    <string name="engineer">Engineering Technology</string>
    <string name="arts">Creative Arts</string>
    <string name="community">Community Services</string>
    <string name="law">Law and Justice</string>
    <string name="business">Business and Information</string>
    <string name="safety">Safety and Environmental</string>

    <!-- Health sector courses -->

    <string name="he1">Advanced Care Paramedic – Graduate Certificate</string>
    <string name="he2">Bachelor of Science in Nursing</string>
    <string name="he3">Dental Assisting (Levels I and II)</string>
    <string name="he4">Dental Hygiene</string>
    <string name="he5">Diagnostic Medical Sonography – Ultrasound</string>
    <string name="he6">Fitness and Health Promotion</string>
    <string name="he7">Health Analytics – Graduate Certificate</string>
    <string name="he8">Magnetic Resonance Imaging (MRI) – Graduate Certificate</string>
    <string name="apply">Apply Now</string>

    <!-- Course content of Health sector -->

    <string name="uc">Under Constructions Will be available soon...!!!</string>
    <string name="he_a_1">An Advanced Care Paramedic Graduate Certificate will add to your Primary Care Paramedic training to advance your career and increase your salary while making a difference in the health of your community. You will undertake advanced training delivered through a combination of classroom, simulation, clinical, and preceptorship environments. You will also complete preceptorship through a combination of ACP land and ACP flight exposure.
You can continue working as a Primary Care Paramedic during your studies.</string>
    <string name="he_a_2">Want a career where you will be in demand, earn a good salary, make a difference in your community, and have access to national and international job opportunities? Earn your Bachelor of Science in Nursing degree through Cambrian, and you will have the skills, knowledge, and practical experience to take on nursing roles in hospitals, long-term care settings, community care centres, and other health organizations.
The Laurentian University Four-Year Collaborative Nursing Program, in collaboration with Laurentian University, Northern College, St. Lawrence College, Sault College, and Cambrian College, combines courses in the humanities, sciences, and social sciences with preparation in the theory and practice of nursing.
Clinical experiences in hospitals and community health care agencies during the program enable you to put into practice the knowledge and skills learned in classes. You will have the opportunity to work with physicians, dieticians, physiotherapists, and members of other health care disciplines.
Nurses with a B.Sc.N. degree can pursue Masters and Doctoral studies to prepare for work as educators, clinical experts, and researchers.</string>
    <string name="he_a_3">Get the skills to launch a career as a Dental Assistant in just one year. In Cambrians program, you wont just be learning, you will be doing – and lots of it! You will start by practicing your skills on mannequins and your classmates in the Colleges dental clinic. Once you have gained some practical experience, yow ill treat real patients in the clinic before completing a placement in a dental office.This combination of theory and practice will give you the required knowledge and practical experience through a multi-disciplinary approach working with dental hygienists, dentists, and other health care professionals in the clinical environment and in community placements. Clinics and some classroom experiences may include evening scheduling.</string>
    <string name="he_a_4">If you are seeking a dental hygiene program in Ontario, look no further than Cambrian College. Our program prepares you to be an integral member of oral health care teams in private practices public health units, long term care homes, mobile dental practices, and industry.
You will have tons of opportunities for hands-on practical learning on mannequins, your classmates, and patients from Sudbury in the colleges on-campus Dental Clinic. You will also be involved in health promotion initiatives that will look impressive on your resume.</string>
    <string name="he_a_5">Cambrians accredited Diagnostic Medical Sonography Ultrasound program will prepare you for entry-level roles in hospitals, medical clinics, and private industry. You will enjoy wide-ranging job opportunities, a higher than average salary, and a career where you will be making a difference in the lives of patients.
You will learn to safely use scanning equipment and imaging techniques to produce images of a body part or system, skills that can be required throughout the different departments of a clinical facility including the trauma unit, operating room, and intensive care area, as well as the diagnostic imaging department.</string>
    <string name="he_a_6">Bring your passion for fitness, health, and wellness to individuals of all ages and backgrounds through our two-year Fitness and Health Promotion program.
This program will prepare you for a career in the health and fitness industry through a hands-on approach to learning and will set you up to gain additional certifications in the field, such as your Canadian Society of Exercise Physiology Certified Personal Trainer (CSEP-CPT) designation and fitness certifications with the Ontario Fitness Council, Sport for Life, High Five, and the Coaching Association of Canada.
Courses will focus on health promotion, individual and group exercise programming, nutrition, fitness assessment, and recreation management. The program is also structured to give you interprofessional opportunities to interact with Cambrian’s Occupational Therapy and Physiotherapy Assistant students, as well as Massage Therapy students.
This program is the only Fitness and Health Promotion program in Ontario with an outdoor recreation course. Enjoy being active outdoors while exploring what northern Ontario has to offer through camping trips and more!</string>
    <string name="he_a_7">Gain the skills to use population data to understand the health of your community and to proactively plan for future health care needs in the only college program of its kind in Ontario.
You’ll also gain a solid understanding of programming, statistics, and data management within the context of the emerging field of health analytics. These skills will be tested and applied through critical thinking and problem-solving exercises, field experiences, and industry speakers throughout the course so that you’ll be equipped to support evidence-based decision making in a variety of health-related organizations.</string>
    <string name="he_a_8">If you have the natural ability to put people at ease and can maintain a high level of accuracy, organization, and patience during stressful situations in a fast-paced environment, a career as a Magnetic Resonance Imaging Technologist could be for you. In just eight months, Cambrians program will provide you with the technical skills needed to excel in this field while exposing you to the day-to-day demands of this profession through a clinical placement in a hospital.Cambrians program is accredited by Accreditation Canada and prepares you for the Canadian Association of Medical Radiation Technologists entry to practice certification exam in Magnetic Resonance Imaging.</string>

    <!-- Contact us Page -->

    <string name="contact">Contact Cambrian</string>
    <string name="localP">Local - (705) 566-8101</string>
    <string name="tollFree">Toll free Ontario - 1-800-461-7145 </string>
    <string name="email_inq">General Inquiries</string>
    <string name="email_inq_ad">info@cambriancollege.ca</string>

    <!-- About us Page -->

    <string name="heading">Since 1967, Cambrian College has been the leading post-secondary institution in Northern Ontario.</string>
    <string name="description1">Our College has a vibrant community of more than 11 000 learners, with over 4100 students in 80 full-time programs, and over 7000 students in almost 900 part-time courses and programs across three campus locations in northern Ontario: Sudbury, Espanola, and Little Current / Manitoulin Island.</string>
    <string name="description2">Discover the range of services and facilities we offer to support students and prepare them for success in todays competitive work places.</string>
    <string name="description3">Explore everything we have to offer and see Cambrian for yourself.</string>
</resources>