<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.HealthSciences"
    android:background="#ad1457">

    <!-- Text view to define the header of the page -->
    <TextView
        android:id="@+id/topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/h3"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <!-- Touchable Text views to define the courses -->
    <TextView
        android:id="@+id/he_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/he1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/topic"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        android:clickable="true"/>

    <TextView
        android:id="@+id/he_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:text="@string/he2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/he_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/he_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:text="@string/he3"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/he_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/he_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:text="@string/he4"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/he_3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/he_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:text="@string/he5"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/he_4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/he_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:text="@string/he6"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/he_5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/he_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:text="@string/he7"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/he_6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/he_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:text="@string/he8"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/he_7"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>